# sql-traits

./: .gitignore  Cargo.toml  README.md  cobertura.xml
.github/: copilot-instructions.md
.github/workflows/: links.yml  rust.yml
docs/: data-statement-analysis-review.md  data-statement-analysis.md
fuzz/: Cargo.toml
fuzz/corpus/: alter_table.sql  complex_types.sql  create_function.sql  create_index.sql  create_policy.sql  create_role_grant.sql  create_table_constraints.sql  create_table_simple.sql  create_trigger.sql
fuzz/fuzz_targets/: fuzz_dialect.rs
src/: errors.rs  impls.rs  lib.rs  structs.rs  traits.rs  utils.rs
src/impls/: sqlparser.rs
src/impls/sqlparser/: check_constraint.rs  column_def.rs  create_function.rs  create_index.rs  create_policy.rs  create_role.rs  create_table.rs  create_trigger.rs  data_statement.rs  dialect.rs  dml.rs  dql.rs  foreign_key_constraint.rs  grant.rs  schema.rs  unique_constraint.rs
src/structs/: fingerprint.rs  generic_db.rs  metadata.rs  schema.rs
src/structs/generic_db/: builder.rs  database.rs  sqlparser.rs
src/structs/generic_db/sqlparser/: functions_in_expression.rs
src/structs/metadata/: check_metadata.rs  index_metadata.rs  policy_metadata.rs  table_attribute.rs  table_metadata.rs
src/traits/: check_constraint.rs  column.rs  data_statement.rs  database.rs  dialect.rs  dml.rs  dql.rs  foreign_key.rs  function_like.rs  grant.rs  index.rs  policy.rs  role.rs  schema.rs  table.rs  trigger.rs  type_match.rs  unique_index.rs
src/utils/: columns_in_expression.rs  common_snake_affix.rs  fingerprint_type_token.rs  identifier_resolution.rs  last_str.rs  maintenance_trigger_parser.rs  normalize_postgres_type.rs  normalize_sqlparser_type.rs  object_name.rs
tests/: data_statement_analysis.rs  fuzz_crashes.rs  golden_fingerprints.rs  thread_safety.rs
tests/fuzz_dialect/fuzz_dialect.__bak/: SIGABRT.PC.7ffff749eb2c.STACK.e7c79ecca.CODE.-6.ADDR.0.INSTR.mov____%eax,%r14d.fuzz  SIGABRT.PC.7ffff749eb2c.STACK.f63be2a31.CODE.-6.ADDR.0.INSTR.mov____%eax,%r14d.fuzz
