[package]
name = "sql-traits"
version = "0.1.0"
edition = "2024"
authors = ["Earth Metabolome Initiative"]
license = "MIT"
repository = "https://github.com/earth-metabolome-initiative/sql-traits"
description = "Rust traits describing SQL-like objects"
readme = "README.md"
keywords = ["sql", "traits", "parser", "geometry"]
categories = ["database", "parsing", "geometry"]

[dependencies]
sqlparser = { git = "https://github.com/apache/datafusion-sqlparser-rs", branch = "main" }
geometric-traits = { git = "https://github.com/earth-metabolome-initiative/geometric-traits", branch = "main" }
thiserror = "2.0"
git2 = "0.20.3"
tempfile = "3.25"
sql_docs = { version = "1.0.11", git = "https://github.com/LucaCappelletti94/sql-docs", branch = "main" }

[lints.rust]
missing_docs = "forbid"
unused_macro_rules = "forbid"
unconditional_recursion = "forbid"
unreachable_patterns = "forbid"
unused_import_braces = "forbid"
unused_must_use = "forbid"
deprecated = "deny"

[lints.rustdoc]
broken_intra_doc_links = "forbid"
bare_urls = "forbid"
invalid_codeblock_attributes = "forbid"
invalid_html_tags = "forbid"
missing_crate_level_docs = "forbid"
unescaped_backticks = "forbid"
redundant_explicit_links = "forbid"
invalid_rust_codeblocks = "forbid"

[lints.clippy]
unreadable_literal = "allow"
missing_panics_doc = "allow"
new_ret_no_self = "allow"
struct_excessive_bools = "allow"
should_panic_without_expect = "allow"
doc_markdown = "allow"
clone_on_copy = "forbid"
pedantic = { level = "deny", priority = -1 }

[dev-dependencies]
arbitrary = "1.4"

[workspace]
members = ["fuzz"]

# Enable debug symbols in release mode for fuzzing
[profile.release]
debug = true
